--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="ludo-container">
     <div class="ludo">
       <div class="player-pieces">
-        <div class="player-piece" player-id="P1" piece="0">player</div>
+        <div class="player-piece" player-id="P1" piece="0"></div>
         <div class="player-piece" player-id="P1" piece="1"></div>
         <div class="player-piece" player-id="P1" piece="2"></div>
         <div class="player-piece" player-id="P1" piece="3"></div>
